source/tests/errors/cannot_access_member_non-table.apex
import os
import table
x = 5
os.output(table.copy(x))